# dsa-lab

./: .editorconfig  .gitignore  LICENSE  README.md  justfile
.github/workflows/: bench.yml  ci.yml
docs/: BENCH_METHOD.md  CONTRACT.md  DATASETS.md  DECISION_GUIDE.md  STYLE.md
impl/cpp/: CMakeLists.txt
impl/cpp/bench/: hashmap_bench.cpp
impl/cpp/src/: hashmap.cpp  hashmap.hpp
impl/cpp/tests/: hashmap_test.cpp  oracle_test.cpp
impl/go/: go.mod
impl/go/bench/: hashmap_bench_test.go
impl/go/internal/hashmap/: hashmap.go  hashmap_test.go
impl/go/tests/: oracle_test.go
impl/python/: pyproject.toml
impl/python/bench/: __init__.py  test_hashmap_bench.py
impl/python/dsa_lab/: __init__.py  hashmap.py
impl/python/tests/: __init__.py  test_hashmap.py  test_oracle.py
impl/rust/: Cargo.toml
impl/rust/benches/: hashmap_bench.rs
impl/rust/src/: hashmap.rs  lib.rs
impl/rust/tests/: oracle_test.rs
reports/: latest.md
reports/raw/: go_bench.txt
reports/raw/rust_criterion/criterion/get/100/report/: index.html
reports/raw/rust_criterion/criterion/get/1000/report/: index.html
reports/raw/rust_criterion/criterion/get/10000/report/: index.html
reports/raw/rust_criterion/criterion/get/report/: index.html
reports/raw/rust_criterion/criterion/hashmap/insert_heavy_uniform_medium/report/: index.html
reports/raw/rust_criterion/criterion/hashmap/mixed_uniform_medium/report/: index.html
reports/raw/rust_criterion/criterion/hashmap/read_heavy_uniform_medium/report/: index.html
reports/raw/rust_criterion/criterion/insert/100/report/: index.html
reports/raw/rust_criterion/criterion/insert/1000/report/: index.html
reports/raw/rust_criterion/criterion/insert/10000/report/: index.html
reports/raw/rust_criterion/get/100/report/: index.html
reports/raw/rust_criterion/get/1000/report/: index.html
reports/raw/rust_criterion/get/10000/report/: index.html
reports/raw/rust_criterion/hashmap/insert_heavy_uniform_medium/report/: index.html
reports/raw/rust_criterion/hashmap/mixed_uniform_medium/report/: index.html
reports/raw/rust_criterion/hashmap/read_heavy_uniform_medium/report/: index.html
reports/raw/rust_criterion/insert/100/report/: index.html
reports/raw/rust_criterion/insert/1000/report/: index.html
reports/raw/rust_criterion/insert/10000/report/: index.html
reports/raw/rust_criterion/insert/report/: index.html
reports/raw/rust_criterion/report/: index.html
tools/: env_capture.py  gen_workloads.py  report.py  requirements.txt
workloads/map/: delete_heavy_uniform_medium.json  delete_heavy_uniform_small.json  delete_heavy_zipf_medium.json  delete_heavy_zipf_small.json  insert_heavy_uniform_medium.json  insert_heavy_uniform_small.json  insert_heavy_zipf_medium.json  insert_heavy_zipf_small.json  manifest.json  mixed_uniform_medium.json  mixed_uniform_small.json  mixed_zipf_medium.json  mixed_zipf_small.json  read_heavy_uniform_medium.json  read_heavy_uniform_small.json  read_heavy_zipf_medium.json  read_heavy_zipf_small.json
