[package]
name = "dsa-lab"
version = "0.1.0"
edition = "2021"
authors = ["dsa-lab contributors"]
description = "Data Structures & Algorithms Lab - Rust Implementation"
license = "MIT"

[lib]
name = "dsa_lab"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[[bench]]
name = "hashmap_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
